Implemented a viewing order (z-axis) to ensure the load selected in the list view is always rendered at the highest z-value